# multiDimensionalIndexTemplateCreation

./: .gitignore  .php-cs-fixer.cache  LICENSE  build.php  compareEpsilon.php  composer.json  config.json.example  database.php  debugFillCheck.php  intersector-test.php  intersector.php  matrix-utils.php  phpcsfixer.sh  polyExample.php  polygon-draw.php  polygon.php  pre-commit-hook.sh  readme.md  runTask.php  test.php  vertex.php
demos/: intersector-test.php  polyExample.php  test.php
libs/: Redis.lib.php  Task.php  Templates.php  database.php  intersector.php  matrix-utils.php  polygon-draw.php  polygon.php  vertex.php
lua/: checkAndLockTask.lua  storeTemplate.lua
luaRedis/: checkAndLockTask.lua  keepTaskLocked.lua  lockTaskAsCompleted.lua  storeTemplate.lua
rust/: Cargo.toml
rust/src/: comparison_test.rs  intersector.rs  main.rs  matrix.rs  polygon.rs  redis_store.rs  task.rs  templates.rs  vertex.rs
tasksList/: tasksToDo.php
tests/: intersector-test.php  isInsidePolyTestsGenerator.php  polyExample.php  test.php
tools/php-cs-fixer/: php_cs.cache
